# ECHO-Orchestrators

./: .env  .env.example  .gitignore  AI WORKSPACE RULESET.txt  CONTROL_UI.md  DESKTOP_ARCHITECTURE_PROPOSAL.md  DESKTOP_V1_PLAN.md  E2E_PIPELINE_REPORT.md  ECHO.md  README.md  SECURITY_RUNTIME.md  SESSION_LOG.md  TEST_LAUNCHER.md  backend_worker.py  base_worker.py  build_launcher.py  chat_ui.py  config.py  context_loader.py  context_resolver.py  control_ui.py  core_router.py  git_manager.py  hello.py  launcher.py  main.py  models.py  planner.py  planner_router.py  project_registry.py  project_router.py  projects.json  pyproject.toml  rules_parser.py  run_pipeline.py  start.bat  start_desktop.cmd  task_history.py  task_store.py  test.txt  (+2 more)
.echo/: architecture.md  branding.md  connectors.md  core.md  security.md
app/: database.py  dependencies.py  main.py
app/exceptions/: http_exceptions.py
app/models/: project.py
app/routes/: project.py  (+1 more)
desktop/: __init__.py  app.py  main_window.py  orchestrator_bridge.py  signals.py
files/: chat_ui.py  start.bat
frontend/: index.html
logs/: echo_metrics.jsonl
orchestrator/: __init__.py  service.py
retrieval/: __init__.py  indexer.py  searcher.py  store.py
scripts/: test_launcher_lifecycle.ps1
task-history/: 58202766-112a-45e6-a738-f88006e5a13a.json  ca32a217-1a0d-48cd-951f-39ac342e9481.json  cb39cb69-a92f-499d-8f1a-c2aeef9768fd.json
temp/: state.json
utils/: hello.py
workers/: __init__.py  backend_worker.py  docs_worker.py  file_writer.py  frontend_worker.py  retrieval_worker.py  test_runner.py  test_worker.py
(+9 files in other folders)
